# Semantic-RAG

./: .gitignore  01-Baseline.ipynb  02-Filenames.ipynb  03-Reranker.ipynb  04-MAUD.ipynb  05-Chunking.ipynb  06-Semantic.ipynb  07-Semantic-Eval.ipynb  08-Semantic-MAUD.ipynb  Exploration-1.ipynb  README.md  evaluate.py  pyproject.toml
lib/: load.py  metrics.py  rerank.py  util.py
notebooks/: 03-Reranker.ipynb  04-MAUD.ipynb  05a-Chunking.ipynb  05c-Eval.ipynb  E02-Semantic.ipynb
rag/: chunk.py  embed.py  load.py  metrics.py  rerank.py
